fix lightbox overflow

--- a/css/main.less
+++ b/css/main.less
@@ -1434,12 +1434,7 @@ input[type=submit] {
 	}
 }
 
-/*
- * Lightbox section
- */
-
- // jquery ui fixes
-
+// jquery ui fixes
 
 #ui-datepicker-div,
 .ui-autocomplete {
@@ -1473,6 +1468,15 @@ body {
 		.gradient(#eee, #e0e0e0, #eee);
 		color: #333;
 	}
+}
+
+
+/*
+ * Lightbox section
+ */
+
+body.lightbox-opened {
+	overflow: hidden;
 }
 
 .lightbox_section {
